stablizing th user model and AI

--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ cachetools==5.3.2
 certifi==2023.7.22
 charset-normalizer==3.3.1
 colorama==0.4.6
+coverage==7.3.2
 Django==4.2.6
 frozenlist==1.4.0
 google-ai-generativelanguage==0.3.3
