--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,9 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@nextui-org/react": "^2.1.13",
     "autoprefixer": "10.4.16",
     "eslint": "8.52.0",
     "eslint-config-next": "14.0.0",
+    "framer-motion": "^10.16.4",
     "next": "14.0.0",
     "postcss": "8.4.31",
     "react": "18.2.0",
