--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,8 @@
     "postcss": "8.4.31",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^4.11.0",
+    "sharp": "^0.32.6",
     "tailwindcss": "3.3.5"
   }
 }
