--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -2,10 +2,19 @@ asgiref==3.7.2
 attrs==23.1.0
 cachetools==5.3.2
 certifi==2023.7.22
+cffi==1.16.0
 charset-normalizer==3.3.1
 colorama==0.4.6
 coverage==7.3.2
+cryptography==41.0.5
+defusedxml==0.8.0rc2
+dj-rest-auth==4.0.0
 Django==4.2.6
+django-allauth==0.52.0
+django-cors-headers==4.3.0
+django-templated-mail==1.1.1
+djangorestframework==3.14.0
+djangorestframework-simplejwt==5.3.0
 frozenlist==1.4.0
 google-ai-generativelanguage==0.3.3
 google-api-core==2.12.0
@@ -15,13 +24,21 @@ googleapis-common-protos==1.61.0
 grpcio==1.59.0
 idna==3.4
 multidict==6.0.4
+oauthlib==3.2.2
 proto-plus==1.22.3
 protobuf==4.24.4
 pyasn1==0.5.0
 pyasn1-modules==0.3.0
+pycparser==2.21
+PyJWT==2.8.0
 python-decouple==3.8
+python3-openid==3.2.0
+pytz==2023.3.post1
 requests==2.31.0
+requests-oauthlib==1.3.1
 rsa==4.9
+social-auth-app-django==5.4.0
+social-auth-core==4.5.0
 sqlparse==0.4.4
 tqdm==4.66.1
 typing-extensions==4.8.0
