--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,10 +11,12 @@
   "dependencies": {
     "@nextui-org/react": "^2.1.13",
     "autoprefixer": "10.4.16",
+    "axios": "^1.6.1",
     "eslint": "8.52.0",
     "eslint-config-next": "14.0.0",
     "framer-motion": "^10.16.4",
     "next": "14.0.0",
+    "next-auth": "^4.24.4",
     "next-themes": "^0.2.1",
     "postcss": "8.4.31",
     "react": "18.2.0",
