--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,9 +14,10 @@
     "axios": "^1.6.1",
     "eslint": "8.52.0",
     "eslint-config-next": "14.0.0",
-    "framer-motion": "^10.18.0",
-    "next": "^15.0.3",
-    "next-auth": "^4.24.10",
+    "framer-motion": "^10.16.4",
+    "lucide-react": "^0.462.0",
+    "next": "14.0.0",
+    "next-auth": "^4.24.4",
     "next-themes": "^0.2.1",
     "postcss": "8.4.31",
     "react": "18.2.0",
